--- a/source/sass/button.scss
+++ b/source/sass/button.scss
@@ -14,6 +14,10 @@
     background-color: $blue2;
   }
 
+  &:focus {
+    background-color: $blue2;
+  }
+
   &:active {
     background-color: $darkblue;
     color: $blue;
