--- a/source/sass/photo-promo.scss
+++ b/source/sass/photo-promo.scss
@@ -1,10 +1,34 @@
 .photo-promo {
-  background: url("../img/bg-intro-triangle-desktop.svg"), url("../img/bg-back-mobile@1x.jpg");
+  position: relative;
+  background: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-color: $backgroundblue;
   min-height: 160px;
   background-position: 50% bottom;
   text-align: center;
+
+  &::after {
+    content: "";
+    position: absolute;
+    background: url("../img/bg-intro-triangle-desktop.svg");
+    background-repeat: no-repeat;
+    background-position: 50% bottom;
+    width: 100%;
+    height: 65px;
+    top: 95px;
+    left: 0;
+    text-align: center;
+  }
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background: url("../img/bg-back-mobile@2x.jpg");
+    background-repeat: no-repeat;
+    background-color: $backgroundblue;
+    min-height: 160px;
+    background-position: 50% 100%;
+    text-align: center;
+    background-size: 768px 390px;
+  }
 }
 
 .photo-promo__img {
@@ -18,13 +42,27 @@
 
 @media (min-width: 768px) {
   .photo-promo {
-    background: url("../img/bg-intro-triangle-desktop.svg"), url("../img/bg-back-tablet@1x.jpg");
+    background: url("../img/bg-back-tablet@1x.jpg");
     background-repeat: no-repeat;
     background-color: $backgroundblue;
     min-height: 290px;
     background-position: 50% bottom;
     text-align: center;
     width: 768px;
+
+    &::after {
+      top: 225px;
+    }
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background: url("../img/bg-back-tablet@2x.jpg");
+      background-repeat: no-repeat;
+      background-color: $backgroundblue;
+      min-height: 290px;
+      background-position: 50% 100%;
+      text-align: center;
+      background-size: 768px 518px;
+    }
   }
 
   .photo-promo__img {
@@ -45,13 +83,27 @@
 
 @media (min-width: 1200px) {
   .photo-promo {
-    background: url("../img/bg-intro-triangle-desktop.svg"), url("../img/bg-back-desktop@1x.jpg");
+    background: url("../img/bg-back-desktop@1x.jpg");
     background-repeat: no-repeat;
     background-color: $backgroundblue;
     min-height: 301px;
     background-position: 50% bottom;
     text-align: center;
     width: 1200px;
+
+    &::after {
+      top: 236px;
+    }
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background: url("../img/bg-back-desktop@2x.jpg");
+      background-repeat: no-repeat;
+      background-color: $backgroundblue;
+      min-height: 301px;
+      background-position: 50% 100%;
+      text-align: center;
+      background-size: 1200px 518px;
+    }
   }
 
   .photo-promo__img {
