--- a/source/sass/promo.scss
+++ b/source/sass/promo.scss
@@ -1,10 +1,24 @@
 .promo {
-  background: url("../img/bg-intro-triangle-desktop.svg"), url("../img/bg-back-mobile@1x.jpg");
+  position: relative;
+  background: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-color: $backgroundblue;
   min-height: 389px;
   background-position: 50% bottom;
   text-align: center;
+
+  &::after {
+    content: "";
+    position: absolute;
+    background: url("../img/bg-intro-triangle-desktop.svg");
+    background-repeat: no-repeat;
+    background-position: 50% bottom;
+    width: 100%;
+    height: 65px;
+    top: 324px;
+    left: 0;
+    text-align: center;
+  }
 
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
@@ -19,6 +33,7 @@
 }
 
 .promo__img {
+  position: relative;
   margin: 0 auto;
   padding-top: 95px;
   background: url("../img/text-sedona-index.svg");
@@ -30,13 +45,17 @@
 
 @media (min-width: 768px) {
   .promo {
-    background: url("../img/bg-intro-triangle-desktop.svg"), url("../img/bg-back-tablet@1x.jpg");
+    background: url("../img/bg-back-tablet@1x.jpg");
     background-repeat: no-repeat;
     background-color: $backgroundblue;
     min-height: 518px;
     background-position: 50% bottom;
     text-align: center;
     width: 768px;
+
+    &::after {
+      top: 453px;
+    }
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
       background: url("../img/bg-back-tablet@2x.jpg");
@@ -57,7 +76,7 @@
 
 @media (min-width: 1200px) {
   .promo {
-    background: url("../img/bg-intro-triangle-desktop.svg"), url("../img/bg-back-desktop@1x.jpg");
+    background: url("../img/bg-back-desktop@1x.jpg");
     background-repeat: no-repeat;
     background-color: $backgroundblue;
     min-height: 518px;
