--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -9,6 +9,7 @@ $gray3: #e6e6e6;
 $gray4: #b2b2b2;
 $gray5: #d5d5d5;
 $gray6: #a4a4a4;
+$gray7: #a9a9a9;
 $lightbrown: #d6d0cc;
 $brown: #766357;
 $brown2: #604e43;
