--- a/source/sass/features.scss
+++ b/source/sass/features.scss
@@ -19,51 +19,20 @@
   text-transform: uppercase;
   margin-bottom: 14px;
   padding-left: 29px;
+}
 
-  &--motel-icon {
-    position: relative;
+.features__icon {
+  position: relative;
+}
 
-    &::before {
-      content: "";
-      position: absolute;
-      top: -13px;
-      left: -19px;
-      width: 39px;
-      height: 41px;
-      background: url("../img/icon-house.svg") no-repeat;
-      background-size: 39px 41px;
-    }
-  }
-
-  &--burger-icon {
-    position: relative;
-
-    &::before {
-      content: "";
-      position: absolute;
-      top: -9px;
-      left: -21px;
-      width: 39px;
-      height: 41px;
-      background: url("../img/icon-burger.svg") no-repeat;
-      background-size: 39px 41px;
-    }
-  }
-
-  &--souvenir-icon {
-    position: relative;
-
-    &::before {
-      content: "";
-      position: absolute;
-      top: -14px;
-      left: -19px;
-      width: 40px;
-      height: 41px;
-      background: url("../img/icon-gift.svg") no-repeat;
-      background-size: 40px 41px;
-    }
-  }
+.features__icon svg {
+  fill: $blue;
+  content: "";
+  position: absolute;
+  top: -13px;
+  left: -19px;
+  width: 39px;
+  height: 41px;
 }
 
 .features__text {
@@ -90,7 +59,7 @@
     width: 33%;
     text-align: center;
 
-    &--eat {
+    &--food {
       order: 2;
     }
 
@@ -107,42 +76,13 @@
     margin: 0 auto;
     margin-top: 137px;
     margin-bottom: 22px;
+  }
 
-    &--motel-icon {
-      position: relative;
-
-      &::before {
-        top: -101px;
-        left: 26px;
-        width: 80px;
-        height: 75px;
-        background-size: 77px 75px;
-      }
-    }
-
-    &--burger-icon {
-      position: relative;
-
-      &::before {
-        top: -102px;
-        left: 30px;
-        width: 78px;
-        height: 79px;
-        background-size: 78px 79px;
-      }
-    }
-
-    &--souvenir-icon {
-      position: relative;
-
-      &::before {
-        top: -101px;
-        left: 30px;
-        width: 80px;
-        height: 75px;
-        background-size: 80px 75px;
-      }
-    }
+  .features__icon svg {
+    top: 38px;
+    left: 90px;
+    width: 80px;
+    height: 72px;
   }
 
   .features__text {
@@ -169,16 +109,16 @@
     margin-bottom: 20px;
 
     &--souvenir {
-      padding-left: 19px;
+      padding-left: 15px;
     }
+  }
 
-    &--souvenir-icon {
-      position: relative;
+  .features__icon svg {
+    left: 160px;
+  }
 
-      &::before {
-        left: 40px;
-      }
-    }
+  .features__icon--souvenir-icon svg {
+    left: 165px;
   }
 
   .features__text {
@@ -186,8 +126,13 @@
     margin: 0 auto;
     padding-left: 0;
 
-    &--eat {
+    &--food {
       padding-left: 11px;
+    }
+
+    &--souvenir {
+      width: 192px;
+      padding-left: 40px;
     }
   }
 }
