--- a/source/sass/photo.scss
+++ b/source/sass/photo.scss
@@ -63,20 +63,23 @@
 }
 
 .photo__likes {
-  position: relative;
   padding-top: 3px;
   padding-left: 36px;
   padding-bottom: 17px;
+}
 
-  &::before {
-    content: "";
-    background: url("../img/icon-like.svg") no-repeat;
-    position: absolute;
-    width: 22px;
-    height: 22px;
-    top: 2px;
-    left: 0;
-  }
+.photo__like-icon {
+  position: relative;
+}
+
+.photo__like-icon svg {
+  content: "";
+  position: absolute;
+  width: 22px;
+  height: 22px;
+  top: 2px;
+  left: 0;
+  fill: $gray4;
 }
 
 @media (min-width: 768px) {
@@ -117,11 +120,16 @@
     padding-left: 22px;
     margin-right: 20px;
     padding-top: 13px;
+  }
 
-    &::before {
-      top: 13px;
-      left: -10px;
-    }
+  .photo__like-icon svg {
+    fill: $gray7;
+    top: -40px;
+    left: 220px;
+  }
+
+  .photo__like-icon--top-photo svg {
+    left: 545px;
   }
 
   .photo__img {
@@ -202,6 +210,15 @@
 
   .photo__likes {
     color: $white;
+  }
+
+  .photo__like-icon svg {
+    fill: $white;
+    left: 295px;
+  }
+
+  .photo__like-icon--top-photo svg {
+    left: 1095px;
   }
 
   .photo__img {
