--- a/source/sass/social-networks.scss
+++ b/source/sass/social-networks.scss
@@ -32,9 +32,11 @@
 .social-networks__link svg {
   content: "";
   position: absolute;
-  top: 14px;
-  left: 13px;
-  width: 26px;
+  padding-top: 14px;
+  padding-bottom: 14px;
+  top: 0;
+  left: 0;
+  width: 48px;
   height: 20px;
   fill: $white;
 
