--- a/source/sass/form-promo.scss
+++ b/source/sass/form-promo.scss
@@ -12,10 +12,10 @@
     position: absolute;
     background: url("../img/bg-intro-triangle-desktop.svg");
     background-repeat: no-repeat;
-    background-position: 50% bottom;
+    background-position: 50% top;
     width: 100%;
-    height: 65px;
-    top: 95px;
+    height: 57px;
+    top: 103px;
     left: 0;
     text-align: center;
   }
@@ -49,7 +49,7 @@
     width: 768px;
 
     &::after {
-      top: 225px;
+      top: 233px;
     }
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
@@ -91,7 +91,7 @@
     width: 1200px;
 
     &::after {
-      top: 236px;
+      top: 244px;
     }
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
