--- a/source/sass/map.scss
+++ b/source/sass/map.scss
@@ -14,6 +14,10 @@
   }
 }
 
+.map svg {
+  margin-top: 161px;
+}
+
 @media (min-width: 768px) {
   .map {
     background-image: url("../img/bg-map-tablet@1x.jpg");
