--- a/source/sass/page.scss
+++ b/source/sass/page.scss
@@ -13,4 +13,10 @@
   .page {
     background-color: $gray;
   }
+
+  .page__wrapper {
+    width: 1200px;
+    margin: 0 auto;
+    box-shadow: 0 0 40px 0 $gray6;
+  }
 }
