--- a/source/sass/promo.scss
+++ b/source/sass/promo.scss
@@ -12,12 +12,12 @@
     position: absolute;
     background: url("../img/bg-intro-triangle-desktop.svg");
     background-repeat: no-repeat;
-    background-position: 50% bottom;
     width: 100%;
     height: 65px;
-    top: 324px;
+    top: 332px;
     left: 0;
     text-align: center;
+    background-position: 50% top;
   }
 
 
@@ -50,7 +50,7 @@
     width: 768px;
 
     &::after {
-      top: 453px;
+      top: 461px;
     }
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
