Контентные изображения вставил через picture

--- a/source/sass/photo.scss
+++ b/source/sass/photo.scss
@@ -5,46 +5,7 @@
 
 .photo__img {
   margin-top: 23px;
-  background-size: 280px 280px;
-  background-position: 50% bottom;
-  background-repeat: no-repeat;
   min-height: 280px;
-
-  &--photo-sunset {
-    background-image: url("../img/photo-sunset-mobile@1x.jpg");
-
-    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../img/photo-sunset-mobile@2x.jpg");
-      background-size: 280px 280px;
-    }
-  }
-
-  &--photo-cactus {
-    background-image: url("../img/photo-cactus-mobile@1x.jpg");
-
-    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../img/photo-cactus-mobile@2x.jpg");
-      background-size: 280px 280px;
-    }
-  }
-
-  &--photo-roads {
-    background-image: url("../img/photo-roads-mobile@1x.jpg");
-
-    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../img/photo-roads-mobile@2x.jpg");
-      background-size: 280px 280px;
-    }
-  }
-
-  &--photo-bridge {
-    background-image: url("../img/photo-bridge-mobile@1x.jpg");
-
-    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../img/photo-bridge-mobile@2x.jpg");
-      background-size: 280px 280px;
-    }
-  }
 }
 
 .photo__inscription {
@@ -101,12 +62,13 @@
     height: 53px;
     justify-content: center;
     margin-top: 0;
-    padding-top: 15px;
+    padding-top: 17px;
     padding-left: 20px;
     padding-bottom: 11px;
 
     &--top-photo {
       width: 629px;
+      padding-top: 13px;
     }
 
     &--left-photo {
@@ -133,48 +95,13 @@
   }
 
   .photo__img {
-    background-size: 324px 267px;
     width: 324px;
     min-height: 267px;
     margin-top: 0;
 
     &--photo-sunset {
-      background-image: url("../img/photo-sunset-tablet@1x.jpg");
-      background-size: 648px 402px;
       width: 648px;
-      padding-top: 176px;
-
-      @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-        background-image: url("../img/photo-sunset-tablet@2x.jpg");
-        background-size: 648px 402px;
-      }
-    }
-
-    &--photo-cactus {
-      background-image: url("../img/photo-cactus-tablet@1x.jpg");
-
-      @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-        background-image: url("../img/photo-cactus-tablet@2x.jpg");
-        background-size: 324px 267px;
-      }
-    }
-
-    &--photo-roads {
-      background-image: url("../img/photo-roads-tablet@1x.jpg");
-
-      @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-        background-image: url("../img/photo-roads-tablet@2x.jpg");
-        background-size: 324px 267px;
-      }
-    }
-
-    &--photo-bridge {
-      background-image: url("../img/photo-bridge-tablet@1x.jpg");
-
-      @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-        background-image: url("../img/photo-bridge-tablet@2x.jpg");
-        background-size: 324px 267px;
-      }
+      padding-top: 44px;
     }
   }
 }
@@ -189,9 +116,10 @@
   }
 
   .photo__inscription {
+    position: relative;
     background-color: $blacktrans;
     width: 380px;
-    margin-top: -78px;
+    margin-top: -77px;
     padding-top: 15px;
 
     &--top-photo {
@@ -222,46 +150,11 @@
   }
 
   .photo__img {
-    background-size: 400px 267px;
-    width: 400px;
+    width: 401px;
 
     &--photo-sunset {
-      background-image: url("../img/photo-sunset-desktop@1x.jpg");
-      background-size: 1200px 402px;
       width: 1200px;
-      padding-top: 135px;
-
-      @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-        background-image: url("../img/photo-sunset-desktop@2x.jpg");
-        background-size: 1200px 402px;
-      }
-    }
-
-    &--photo-cactus {
-      background-image: url("../img/photo-cactus-desktop@1x.jpg");
-
-      @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-        background-image: url("../img/photo-cactus-desktop@2x.jpg");
-        background-size: 400px 267px;
-      }
-    }
-
-    &--photo-roads {
-      background-image: url("../img/photo-roads-desktop@1x.jpg");
-
-      @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-        background-image: url("../img/photo-roads-desktop@2x.jpg");
-        background-size: 400px 267px;
-      }
-    }
-
-    &--photo-bridge {
-      background-image: url("../img/photo-bridge-desktop@1x.jpg");
-
-      @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-        background-image: url("../img/photo-bridge-desktop@2x.jpg");
-        background-size: 400px 267px;
-      }
+      padding-top: 0;
     }
   }
 }
