--- a/source/sass/page-footer.scss
+++ b/source/sass/page-footer.scss
@@ -1,12 +1,13 @@
 .page-footer {
   display: flex;
   flex-direction: column;
+  padding-top: 6px;
 }
 
 .page-footer__hashtag-sedona {
   display: block;
   text-align: center;
-  margin-top: 33px;
+  margin-bottom: 35px;
 }
 
 .page-footer__powered-by {
@@ -19,7 +20,7 @@
 .page-footer__social-networks {
   margin: 0;
   padding: 0;
-  margin-top: 39px;
+  margin-top: 4px;
 }
 
 @media (min-width: 768px) {
@@ -32,11 +33,16 @@
 
   .page-footer__hashtag-sedona {
     padding-top: 13px;
+    margin-bottom: 0;
+  }
+
+  .page-footer__social-networks {
+    margin-top: 3px;
   }
 
   .page-footer__powered-by {
     width: 130px;
-    padding-top: 47px;
+    padding-top: 13px;
     padding-left: 7px;
     margin: 0;
   }
