--- a/source/sass/text.scss
+++ b/source/sass/text.scss
@@ -1,5 +1,5 @@
 .text--weight-bold {
-  font-family: "PT Sans", "Arial", sans-serif;
+  font-family: "PT Sans Bold", "Arial", sans-serif;
   font-weight: bold;
 }
 
