--- a/source/sass/page-footer.scss
+++ b/source/sass/page-footer.scss
@@ -1,7 +1,7 @@
 .page-footer {
   display: flex;
   flex-direction: column;
-  padding-top: 6px;
+  padding-top: 30px;
 }
 
 .page-footer__hashtag-sedona {
@@ -20,7 +20,7 @@
 .page-footer__social-networks {
   margin: 0;
   padding: 0;
-  margin-top: 4px;
+  margin-top: 3px;
 }
 
 @media (min-width: 768px) {
@@ -38,6 +38,7 @@
 
   .page-footer__social-networks {
     margin-top: 3px;
+    padding-left: 6px;
   }
 
   .page-footer__powered-by {
@@ -53,6 +54,7 @@
     width: 1080px;
     background-color: $white;
     margin-bottom: 0;
+    padding-top: 20px;
     padding-right: 60px;
     padding-left: 60px;
     padding-bottom: 45px;
