--- a/source/sass/page-main-header.scss
+++ b/source/sass/page-main-header.scss
@@ -5,7 +5,7 @@
 .page-main-header__title {
   text-transform: uppercase;
   margin: 0 auto;
-  margin-top: 43px;
+  margin-top: 40px;
   text-align: center;
   width: 255px;
 }
@@ -22,11 +22,13 @@
 
 @media (min-width: 768px) {
   .page-main-header__title {
-    margin-top: 50px;
+    margin-top: 51px;
     font-size: 21px;
     width: 448px;
     padding-left: 104px;
     padding-right: 104px;
+    font-family: "PT Sans", "Arial", sans-serif;
+    font-weight: bold;
   }
 
   .page-main-header__text {
