--- a/source/sass/page-photo.scss
+++ b/source/sass/page-photo.scss
@@ -1,3 +1,7 @@
+.page-photo__header {
+  margin-top: -5px;
+}
+
 .page-photo__promo {
   margin: 0 auto;
 }
@@ -7,5 +11,17 @@
 }
 
 .page-photo__video-gallery {
-  padding-bottom: 41px;
+  padding-bottom: 43px;
+}
+
+@media (min-width: 768px) {
+  .page-photo__header {
+    margin-top: 0;
+  }
+}
+
+@media (min-width: 1200px) {
+  .page-photo__video-gallery {
+    padding-bottom: 51px;
+  }
 }
