--- a/source/sass/reason.scss
+++ b/source/sass/reason.scss
@@ -42,9 +42,8 @@
 
   &--image-reason-second {
     width: 320px;
-    height: 333px;
+    height: 258px;
     position: relative;
-    top: -75px;
   }
 }
 
@@ -59,7 +58,7 @@
     background-repeat: no-repeat;
     background-position: 50% top;
     background-size: 320px 37px;
-    padding-top: 77px;
+    padding-top: 79px;
   }
 
   &--without-photo {
@@ -75,11 +74,11 @@
   margin-top: 14px;
 
   &::before {
-    content: "- ";
+    content: "— ";
   }
 
   &::after {
-    content: " -";
+    content: " —";
   }
 }
 
@@ -162,9 +161,8 @@
 
     &--image-reason-second {
       width: 515px;
-      height: 339px;
+      height: 258px;
       position: relative;
-      top: -81px;
     }
   }
 
@@ -172,21 +170,26 @@
     background: none;
     font-size: 21px;
     line-height: 26px;
-    width: 156px;
+    width: 155px;
     padding-top: 44px;
-    letter-spacing: 0.5;
+    font-family: "PT Sans", "Arial", sans-serif;
+    font-weight: bold;
 
     &--triangle {
       background: none;
     }
 
     &--without-photo {
-      padding-left: 7px;
+      padding-left: 5px;
     }
 
     &--reason-fifth {
       padding-left: 12px;
     }
+  }
+
+  .reason__title-shift {
+    display: block;
   }
 
   .reason__num {
@@ -201,7 +204,8 @@
   }
 
   .reason__text {
-    width: 162px;
+    width: 170px;
+    padding-top: 2px;
 
     &--without-photo {
       border: none;
@@ -214,7 +218,7 @@
     }
 
     &--reason-fourth {
-      width: 152px;
+      width: 149px;
       padding-left: 8px;
     }
   }
@@ -237,26 +241,32 @@
 
   .reason__content {
     min-height: 225px;
+    width: 401px;
   }
 
   .reason__title {
-    padding-top: 51px;
+    padding-top: 53px;
+    padding-left: 0;
+    font-family: "PT Sans bold", "Arial", sans-serif;
+
 
     &--without-photo {
-      padding-top: 41px;
+      padding-top: 43px;
     }
 
     &--reason-fourth {
-      padding-left: 12px;
+      padding-left: 6px;
     }
 
     &--reason-fifth {
-      padding-left: 20px;
+      padding-left: 15px;
     }
   }
 
   .reason__num {
     margin-bottom: 24px;
+    margin-top: 12px;
+    padding-left: 2px;
 
     &--reason-fifth {
       padding-left: 20px;
@@ -268,23 +278,25 @@
     &--image-reason-first {
       width: 804px;
       position: relative;
-      top: -50px;
-      height: 356px;
+      top: -70px;
+      height: 400px;
     }
 
     &--image-reason-second {
       width: 804px;
-      height: 384px;
+      height: 400px;
       position: relative;
-      top: -125px;
+      top: -76px;
     }
   }
 
   .reason__text {
     width: 265px;
+    padding-top: 0;
 
     &--without-photo {
       width: 290px;
+      padding-top: 2px;
     }
 
     &--reason-second {
@@ -292,7 +304,7 @@
     }
 
     &--reason-fourth {
-      width: 284px;
+      width: 279px;
       padding-left: 12px;
     }
 
