--- a/source/sass/social-networks.scss
+++ b/source/sass/social-networks.scss
@@ -10,7 +10,7 @@
   display: block;
   margin: 0;
   padding: 0;
-  width: 48px;
+  width: 47px;
   height: 48px;
   color: $white;
   background-color: $blue;
@@ -34,10 +34,10 @@
   position: absolute;
   padding-top: 14px;
   padding-bottom: 14px;
-  top: 0;
-  left: 0;
-  width: 48px;
-  height: 20px;
+  top: 1px;
+  left: -1px;
+  width: 50px;
+  height: 15px;
   fill: $white;
 
   &:active {
