--- a/source/sass/form.scss
+++ b/source/sass/form.scss
@@ -333,6 +333,7 @@
       order: -1;
       border: none;
       width: 380px;
+      height: 280px;
       border-right: 1px solid #e5e5e5;
     }
 
@@ -345,14 +346,14 @@
       width: 648px;
       border-top: 1px solid $bordergray;
       border-bottom: none;
-      margin-top: 31px;
+      margin-top: 46px;
     }
   }
 
   .form__legend {
     margin: 0 auto;
     font-size: 21px;
-    padding-top: 75px;
+    padding-top: 0;
     padding-bottom: 40px;
 
     &--personal-data {
@@ -361,7 +362,8 @@
     }
 
     &--impression {
-      padding-bottom: 57px;
+      margin-bottom: 57px;
+      padding-bottom: 0;
       padding-left: 8px;
       width: 285px;
     }
@@ -382,7 +384,7 @@
     &--comment {
       padding-top: 12px;
       padding-bottom: 12px;
-      margin-bottom: 32px;
+      margin-bottom: 5px;
       width: 390px;
     }
   }
@@ -459,6 +461,7 @@
 
   .form__textarea {
     width: 621px;
+    margin-top: 26px;
     padding-top: 9px;
   }
 
@@ -497,11 +500,12 @@
 
     &--landmarks {
       width: 960px;
-      padding-bottom: 31px;
+      padding-bottom: 33px;
     }
 
     &--impression {
       width: 480px;
+      height: 221px;
       border-right: 1px solid #e5e5e5;
       margin-left: 61px;
       padding-right: 60px;
@@ -511,7 +515,7 @@
     &--contact-information {
       width: 940px;
       margin-left: 120px;
-      padding-bottom: 20px;
+      padding-bottom: 60px;
     }
 
     &--comment {
@@ -532,6 +536,7 @@
     &--impression {
       width: 400px;
       padding-left: 10px;
+      margin-bottom: 0;
     }
 
     &--personal-data {
@@ -539,7 +544,6 @@
     }
 
     &--contact-information {
-      margin-bottom: 51px;
       padding-left: 19px;
     }
 
@@ -548,7 +552,7 @@
     }
 
     &--comment {
-      margin-bottom: 46px;
+      margin-bottom: 0;
     }
   }
 
@@ -609,6 +613,7 @@
 
     &--contact-information {
       width: 258px;
+      margin-top: 47px;
     }
   }
 
@@ -624,6 +629,7 @@
 
   .form__textarea {
     width: 933px;
+    margin-top: 47px;
   }
 
   .form__button {
