--- a/source/sass/page-form-header.scss
+++ b/source/sass/page-form-header.scss
@@ -34,6 +34,7 @@
 
   .page-form-header__text {
     margin-top: 30px;
+    margin-bottom: 75px;
     width: 444px;
     letter-spacing: 0.1;
   }
@@ -47,5 +48,9 @@
 
   .page-form-header__content {
     margin-top: 112px;
+  }
+
+  .page-form-header__text {
+    margin-bottom: 0;
   }
 }
